<resources>
    <string name="app_name">LunchBuddy</string>
    <string name="looking_for">I am looking for...</string>
    <string name="or">or</string>
    <string name="find_lunch">Find someone to eat lunch with now</string>
    <string name="find_now">Find someone now</string>
    <string name="lunch_buddy">Lunch Buddy</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="interests">Interests</string>
    <string name="location">Location</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_interests">My Interests</string>
    <string name="add_interest">Add Interest</string>
    <string name="interest_info">Interest Info</string>
    <string name="interest">Interest</string>
    <string name="expertise_level">Expertise level</string>
    <string name="details">Details</string>
    <string name="my_profile">My Profile</string>
    <string name="save">Save</string>
    <string name="plus">+</string>
    <string name="add">Add</string>
    <string name="not_on_list">Not on the list?</string>
    <string name="create_new_interest">Create new interest</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_email">Confirm email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="caf_map">Cafeteria Map</string>
    <string name="interests_include">Interests include:</string>
    <string name="flip_coin">Flip the coin to determine seating</string>
    <string name="map_notice">NOTICE: At this time, this feature is for demonstration purposes only and does not work
        properly. It will be added in a future update.
    </string>
    <string name="other_interests">Other interests</string>
    <string name="remove_interest">Remove Interest</string>
    <string name="search_interest">Search interest...</string>
    <string name="no_users">No users have added this interest</string>
    
    <string-array name="expertise_levels_array">
        <item>Novice</item>
        <item>OK</item>
        <item>Expert</item>
    </string-array>
</resources>
