<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddInterestFinishActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/add_interest_finish_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_info"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:layout_gravity="center" />
    </android.support.v7.widget.Toolbar>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/add_interest_finish_toolbar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView9"/>

    <TextView
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textColor="@color/black"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView10"/>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/expertise_level"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView11"/>

    <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="16dp"
    android:id="@+id/add_interest_spinner"></Spinner>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/details" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/add_interest_spinner"
            android:layout_marginTop="8dp" android:id="@+id/textView12"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:hint="@string/looking_for"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>