<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectedUserActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/selected_user_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/user_icon"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/selected_user_toolbar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/circleImageView"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/name"
              android:textColor="@color/black"
              android:textSize="@dimen/text_size_medium"
              android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/circleImageView"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp" android:layout_marginTop="4dp" android:id="@+id/textView23"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/email"
              android:layout_marginTop="4dp"
              android:textSize="@dimen/text_size_medium"
              app:layout_constraintTop_toBottomOf="@+id/textView23" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp" android:id="@+id/textView24"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/interest"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@+id/textView24" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" android:id="@+id/textView25"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textColor="@color/black"
              android:text="@string/interest"
              android:layout_marginTop="8dp"
              android:textSize="@dimen/text_size_medium"
              app:layout_constraintTop_toBottomOf="@+id/textView25" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" android:id="@+id/textView26"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/expertise_level"
              app:layout_constraintStart_toEndOf="@+id/textView26"
              android:layout_marginStart="8dp" android:layout_marginTop="8dp"
              android:textSize="@dimen/text_size_medium"
              app:layout_constraintTop_toBottomOf="@+id/textView25" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              android:text="@string/details"
              android:layout_marginTop="8dp"
              android:textSize="@dimen/text_size_medium"
              app:layout_constraintTop_toBottomOf="@+id/textView26" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp" android:id="@+id/textView27"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/other_interests"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@+id/textView27" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" android:id="@+id/textView28"/>

    <android.support.v7.widget.RecyclerView android:layout_width="0dp"
                                            android:layout_height="0dp"
                                            android:layout_marginTop="8dp"
                                            app:layout_constraintTop_toBottomOf="@+id/textView28"
                                            app:layout_constraintStart_toStartOf="parent"
                                            app:layout_constraintEnd_toEndOf="parent"
                                            app:layout_constraintBottom_toBottomOf="parent">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>