<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@layout/background_gradient">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lunch Buddy"
            android:textSize="@dimen/text_size_xlarge"
            android:textColor="@color/white"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView7"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/email"
              android:textColor="@color/white"
              android:layout_marginTop="64dp"
              app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" android:id="@+id/textView13"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:backgroundTint="@color/light_grey"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:id="@+id/login_email_edittext"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email_edittext" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView14"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:id="@+id/login_password_edittext"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/text_size_medium"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button_shape"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/login_password_edittext"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:id="@+id/login_login_button"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login_signup_button"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@color/white"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/login_signup_button"/>

</android.support.constraint.ConstraintLayout>