<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyProfileActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/my_profile_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="4dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:layout_gravity="center" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/my_profile_toolbar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/user_icon"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:id="@+id/my_profile_imageview"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_imageview"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:id="@+id/textView3"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/my_profile_email_textview"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_email_textview"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:id="@+id/textView5"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:background="@color/white" android:id="@+id/my_profile_name_edittext"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_name_edittext" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:id="@+id/textView6"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/interests"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="16dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    android:id="@+id/my_profile_interests_textview"/>

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:src="@mipmap/forward_arrow"
                       android:layout_marginTop="8dp"
                       android:contentDescription="@string/add"
                       app:layout_constraintTop_toTopOf="@+id/my_profile_interests_textview"
                       android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView8"
                       app:layout_constraintEnd_toEndOf="@+id/my_profile_interests_textview"
                       android:layout_marginEnd="16dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:background="@color/white"
                    android:padding="16dp" android:layout_marginTop="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_interests_textview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView8"/>

            <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/textView8" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    android:id="@+id/my_profile_location_switch"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:background="@color/white"
                    android:textSize="@dimen/text_size_medium"

                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="400dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:id="@+id/my_profile_signout_button"/>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>