<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditInterestActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/edit_interest_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:id="@+id/edit_interest_toolbar_title_textview"
                android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <ScrollView android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edit_interest_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/interest"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                      android:id="@+id/textView23"/>

            <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                      android:text="@string/interest"
                      android:background="@color/white"
                      android:padding="@dimen/text_size_small"
                      app:layout_constraintStart_toStartOf="parent"
                      android:textColor="@color/black"
                      android:textSize="@dimen/text_size_medium"
                      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView23"
                      app:layout_constraintEnd_toEndOf="parent" android:id="@+id/edit_interest_title_textview"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/expertise_level"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/edit_interest_title_textview"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="16dp"
                      android:id="@+id/tv"/>

            <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/tv" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:padding="16dp"
                     android:background="@color/white"
                     android:entries="@array/expertise_levels_array"
                     android:id="@+id/edit_interest_spinner"/>

            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/details" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/edit_interest_spinner"
                    android:layout_marginTop="8dp" android:id="@+id/tv12"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="16dp"
                    android:hint="@string/looking_for"
                    android:layout_marginTop="8dp"
                    android:id="@+id/edit_interest_details_edittext"
                    app:layout_constraintTop_toBottomOf="@+id/tv12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />

            <Button android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_interest_details_edittext"
                    android:layout_marginBottom="256dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/remove_interest"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:background="@color/white"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/edit_interest_remove_button"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>