<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:foreground="?android:attr/selectableItemBackground"
                                             android:id="@+id/interest_user_item_constraintlayout"
                                             android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="50dp" android:layout_height="50dp"
                                                  android:src="@mipmap/user_icon" android:layout_marginTop="8dp"
                                                  app:layout_constraintTop_toTopOf="parent"
                                                  app:layout_constraintStart_toStartOf="parent"
                                                  android:layout_marginStart="16dp"
                                                  android:id="@+id/interest_user_item_imageview"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/name"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toEndOf="@+id/interest_user_item_imageview"
              android:layout_marginStart="8dp" android:id="@+id/interest_user_item_name_textview"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/expertise_level"
              app:layout_constraintStart_toEndOf="@+id/interest_user_item_name_textview"
              android:layout_marginStart="8dp"
              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/interest_user_item_experience_textview"/>

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              android:text="@string/details"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/interest_user_item_name_textview"
              app:layout_constraintStart_toEndOf="@+id/interest_user_item_imageview" android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
              android:id="@+id/interest_user_item_details_textview"/>

    <View android:layout_width="0dp" android:layout_height="1dp"
          android:background="@color/light_grey"
          android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@+id/interest_user_item_details_textview"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/interest_user_item_imageview" android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>